# RobotNurseHelper

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  TODO.md
Kebbi/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
Kebbi/app/: build.gradle
Kebbi/app/src/main/: AndroidManifest.xml
Kebbi/app/src/main/TrashCan/: CameraService.java  ImageListener.java
Kebbi/app/src/main/java/tw/edu/cgu/ai/kebbi/: AudioManager.kt  CameraService.kt  MainActivity.java  SocketManager.java
Kebbi/app/src/main/res/layout/: main_activity.xml
Kebbi/app_pressnumber/: build.gradle
Kebbi/app_pressnumber/src/main/: AndroidManifest.xml
Kebbi/app_pressnumber/src/main/java/tw/edu/cgu/ai/kebbi/pressnumber/: MainActivity.java  NetworkSettingActivity.java
Kebbi/app_pressnumber/src/main/res/layout/: activity_main.xml
Kebbi/app_pressnumber/src/main/res/layout-land/: activity_main.xml
Kebbi/app_pressnumber/src/main/res/values/: strings.xml
Kebbi/app_tablet_controller/: .gitignore  build.gradle
Kebbi/app_tablet_controller/src/main/: AndroidManifest.xml
Kebbi/app_tablet_controller/src/main/java/tw/edu/cgu/ai/kebbi/tabletcontroller/: MainActivity.java  NetworkSettingActivity.java
Kebbi/app_tablet_controller/src/main/res/layout/: activity_main.xml  activity_network_setting.xml
Kebbi/app_tablet_controller/src/main/res/layout-land/: activity_main.xml  activity_network_setting.xml
Kebbi/app_tablet_controller/src/main/res/values/: colors.xml  strings.xml  styles.xml
Kebbi/gradle/: gradle-daemon-jvm.properties
Kebbi/gradle/wrapper/: gradle-wrapper.properties
Kebbi/queuetest/: build.gradle
Kebbi/servicetest/: build.gradle.kts
Kebbi/servicetest/src/androidTest/java/tw/edu/cgu/ai/servicetest/: ExampleInstrumentedTest.kt
Kebbi/servicetest/src/main/: AndroidManifest.xml
Kebbi/servicetest/src/main/java/tw/edu/cgu/ai/servicetest/: CameraFrameService.kt  MainActivity.kt
Kebbi/servicetest/src/main/java/tw/edu/cgu/ai/servicetest/ui/theme/: Color.kt  Theme.kt  Type.kt
Kebbi/servicetest/src/main/res/values/: themes.xml
Kebbi/servicetest/src/test/java/tw/edu/cgu/ai/servicetest/: ExampleUnitTest.kt
Server/: .gitignore  ActionOption.hpp  AnythingLLM.cpp  AnythingLLM.hpp  BargeInControl.hpp  CMakeLists.txt  GetLandmarks.cpp  GetLandmarks.hpp  JPEG.cpp  JPEG.hpp  LandmarkToRobotAction.hpp  MediaPipeDetector.cpp  MediaPipeDetector.h  PatientTitle_Chinese.txt  PatientTitle_English.txt  README.md  RobotNurseHelper.desktop  SendMessageManager.cpp  SendMessageManager.hpp  SendMessageManager_Ext.hpp  Setting.hpp  SocketBufferParser.cpp  SocketBufferParser.hpp  SocketClientHandler.cpp  SocketClientHandler.hpp  ThreadLLM.cpp  ThreadLLM.hpp  ThreadPortAudio.cpp  ThreadProcessImage.cpp  ThreadProcessImage.hpp  ThreadReceiveMessage.hpp  ThreadSafeQueue.hpp  ThreadStateControl.cpp  ThreadStateControl.hpp  ThreadWhisper.cpp  ThreadWhisper.hpp  VideoWindow.cpp  VideoWindow.hpp  Yolo11Pose.cpp  Yolo11Pose.hpp  (+23 more)
Server/Images/: Welcome.xcf
Server/Kebbi/: LandmarkToRobotAction.cpp  RobotCommand.proto  ThreadReceiveMessage.cpp  ThreadTablet_PainRate.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Server/LLM/: AnthingLLM_Setting.txt  CataractRAG.txt  CataractRAG_English.txt
Server/Zenbo/: LandmarkToRobotAction.cpp  RobotCommand.proto  ThreadTablet.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Server/json/: AGXOrin1.json  AGXOrin2.json  Cataract.json  Cataractproject.json  Cataractproject_English.json  InteractWithChildren.json  ROGG16.json  Setting.json  chinese.json  eng_Cataractproject_English.json  shivpc.json
Server/mediapipe_addition/graph_strings/: face_cpu.txt  hand_cpu.txt  holistic_cpu.txt  holistic_gpu.txt  pose_cpu.txt  pose_gpu.txt
Tablet/: README.md  build.gradle  settings.gradle
Tablet/app/: build.gradle
Tablet/app/src/main/: AndroidManifest.xml
Tablet/app/src/main/java/com/example/painrating/: MainActivity.java
Tablet/app/src/main/res/values/: strings.xml  styles.xml
Tablet/gradle/wrapper/: gradle-wrapper.properties
Zenbo/app/: build.gradle
Zenbo/app/src/main/java/tw/edu/cgu/ai/zenbo/: MainActivity.java  SocketManager.java
ZenboJuniorII/: build.gradle
ZenboJuniorII/app/: build.gradle
ZenboJuniorII/app/src/main/res/layout/: main_activity.xml
